# simgrid-dag

./: .gitlab-ci.yml  3stage.cpp  CMakeLists.txt  README.md  daglab1.cpp  lab1_platform.xml  master-workers.cpp  multipipeline.cpp  ping-pong.cpp  project1.cpp  shell.nix
